<resources>
    <string name="app_name">Quizique</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="intro">Think you know a lot about Andela? Let's test your knowledge. Answer the following questions:</string>
    <string name="number1">1.</string>
    <string name="question_1">What is the name of the person in this image?</string>
    <string name="number2">2.</string>
    <string name="question_2">What is the name of the Program Manager in charge of AlC Beginner Program?</string>
    <string name="option2a">Alimi Eyitayo</string>
    <string name="option2b">Babajide Duroshola</string>
    <string name="option2c">Solomon Awosupin</string>
    <string name="option2d">Chioma James</string>
    <string name="number3">3.</string>
    <string name="question_3">Which of these people are among the Andela officials who organized the AlC Beginners Program?</string>
    <string name="option3a">Oghenemaro Boye</string>
    <string name="option3b">Alimi Eyitayo</string>
    <string name="option3c">Solomon Awosupin</string>
    <string name="option3d">Chimdindu Aniete</string>
    <string name="number4">4.</string>
    <string name="question_4">Who is the country director for Andela Nigeria?</string>
    <string name="option4a">Joshua Mwaniki</string>
    <string name="option4b">Babajide Duroshola</string>
    <string name="option4c">Seni Sulyman</string>
    <string name="option4d">Brice Nkengsa</string>
    <string name="number5">5.</string>
    <string name="question_5">What position does Iyinoluwa Aboyeji occupy in Andela?</string>
    <string name="option5a">Director of Engineering</string>
    <string name="option5b">Co-Founder and COO</string>
    <string name="option5c">Vice President</string>
    <string name="option5d">Co-Founder</string>
    <string name="number6">6.</string>
    <string name="question_6">What is the name of the AlC Ogun State Co-ordinator?</string>
    <string name="option6a">Alimi Eyitayo</string>
    <string name="option6b">Babajide Duroshola</string>
    <string name="option6c">Solomon Awosupin</string>
    <string name="option6d">Chioma James</string>
    <string name="number7">7.</string>
    <string name="question_7">Who is the Co_Founder and CEO of Andela?</string>
    <string name="option7a">Iyinoluwa Aboyeji</string>
    <string name="option7b">Jeremy Johnson</string>
    <string name="option7c">Christina Sass</string>
    <string name="option7d">Brice Nkengsa</string>
    <string name="button_text">submit</string>
</resources>
